SYSAD-45: Clean-Up: structure, naming etc
