# source/mailingService/app/api/validation/validator.py
@@ -1,54 +1,52 @@
 from typing import Dict, Any
 import logging
 
-from entity.exceptions.BadRequestException import BadRequestException
-
-logging.basicConfig(level=logging.INFO, format="%(asctime)s - %(name)s - %(levelname)s - %(message)s")
+from entity.exceptions.bad_request_exception import BadRequestException
 
 class Validator:
     def __init__(self):
         self.logger = logging.getLogger(self.__class__.__name__)
 
-    def validateData(self, productList) -> Dict[str, Any]:
+    def validate_data(self, product_list) -> Dict[str, Any]:
         self.logger.debug("test")
         try:
-            if len(productList) < 1:
+            if len(product_list) < 1:
                 self.logger.error("No products provided!")
                 raise BadRequestException()
-            for product in productList:
-                isDataValid = []
+            for product in product_list:
+                is_data_valid = []
 
-                isDataValid.append("productId" in product)
-                isDataValid.append("productName" in product)
-                isDataValid.append("productAmountTotal"  in product)
-                isDataValid.append("productAmountAdded" in product)
+                is_data_valid.append("productId" in product)
+                is_data_valid.append("productName" in product)
+                is_data_valid.append("productAmountTotal" in product)
+                is_data_valid.append("productAmountAdded" in product)
 
-                isDataValid.append(isinstance(product["productId"], int))
-                isDataValid.append(isinstance(product["productName"], str))
-                isDataValid.append(isinstance(product["productAmountTotal"], int))
-                isDataValid.append(isinstance(product["productAmountAdded"], int))
-                isDataValid.append(len(product["productName"]) > 0)
+                is_data_valid.append(isinstance(product["productId"], int))
+                is_data_valid.append(isinstance(product["productName"], str))
+                is_data_valid.append(isinstance(product["productAmountTotal"], int))
+                is_data_valid.append(isinstance(product["productAmountAdded"], int))
+                is_data_valid.append(len(product["productName"]) > 0)
 
-                if False in isDataValid:
+                if False in is_data_valid:
                     self.logger.error("Validation failed!")
                     raise BadRequestException()
-            return productList
+            return product_list
         
         except Exception:
-            self.logger.error(f"Invalid data: {productList}")
+            self.logger.error(f"Invalid data: {product_list}")
             raise BadRequestException()
 
-    def validateErrorMessage(self, requestData: Dict[str, Any]) -> Dict[str, Any]:
+    def validate_error_message(self, request_data: Dict[str, Any]) -> Dict[str, Any]:
         try:
-            isDataValid = []
-            isDataValid.append("errorMessage" in requestData)
-            isDataValid.append(isinstance(requestData["errorMessage"], str))
-            isDataValid.append(len(requestData["errorMessage"]) > 0)
-            if False in isDataValid:
-                    self.logger.error("Validation failed!")
-                    raise BadRequestException()
-            return requestData
+            is_data_valid = []
+            is_data_valid.append("errorMessage" in request_data)
+            is_data_valid.append(isinstance(request_data["errorMessage"], str))
+            is_data_valid.append(len(request_data["errorMessage"]) > 0)
+            if False in is_data_valid:
+                self.logger.error("Validation failed!")
+                raise BadRequestException()
+            return request_data
         
         except Exception:
-            self.logger.error(f"Invalid data: {requestData}")
+            self.logger.error(f"Invalid data: {request_data}")
             raise BadRequestException()
